<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DebtTrack</string>
    <string name="title_section1">Contacts</string>
    <string name="title_section2">Favorites</string>
    <string name="title_section3">My Debts</string>
    <string name="title_section4">Calculator</string>
    <string name="title_section5">About</string>
    <string name="title_section6">Money Pots</string>
    <string name="title_section7">Add Debt</string>
    <string name="title_section8">Chosen Dept</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="due">Due</string>
    <string name="desc">Description (max 255 chars)</string>
    <string name="debts">Debts</string>
    <string name="adddebt">Add debt</string>
    <string name="reminder">Reminder</string>
    <string name="confirm">Confirm</string>
    <string name="favorite">Favorite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">+</string>
    <string name="action_settings">Settings</string>
    <string name="AddDebt_dateFormat">dd-MM-yyyy</string>
    <string name="AddDebt_date">date</string>
    <string name="AddDebt_Due">due</string>
    <string name="contacts_header">Contacts</string>
    <string name="phoneNumber">Phone:</string>
    <string name="contactName">Name</string>
    <string name="bankAcc">Bank account</string>
    <string name="contactDesc">Other info</string>
    <string name="Favorite">Favorite</string>
    <string name="AddContact">Add contact</string>
    <string name="newContact">Add contact</string>
    <string name="X">X</string>
    <string name="Money_Pot">Money Pot</string>
    <string name="addMoneyPotDebt">New entry</string>
    <string name="moneyPotNewEntry">New pot entry</string>
    <string name="moneyPotPeople">Total Amount</string>
    <string name="Amount_per_person">Calculated split: </string>
    <string name="Money_Pot_Name">Money Pot</string>
    <string name="Money_Pot_Desc">Description</string>
    <string name="title_section9">Money Pot Entry</string>
    <string name="Purchases">Purchases</string>
    <string name="description">About Contact</string>
    <string name="potName">Pot name</string>
    <string name="addContact">+</string>
    <string name="searchContact">Search</string>
    <string name="search_hint">search</string>
    <string name="totalAmountPlaceHolder">amount</string>
    <string name="totalAmount">Total Amount:</string>
    <string name="myAbout">About me:</string>
    <string name="yourInfo">Your Info:</string>
    <string name="newcomer">This looks like this is the first time you are using the My debts feature. Please fill in some basic information about yourself to get started.</string>
    <string name="app_description">This application was made as an assignment in Hugbúnaðarverkefni 1 (e. Software project 1) in the University of Iceland. The creators are 4 friends who are all studying software engineering and call themselves Napptime devolopment.</string>
    <string name="title_section10">Money Pots</string>
    <string name="bot_name">Money Pot Name</string>
    <string name="Descr">Descr.:</string>
    <string name="deletePot">Delete Money Pot</string>
    <string name="newEntry">New Entry</string>
    <string name="confirmNewEntry">Confirm</string>
    <string name="split">Equal split:</string>
    <string name="splitAmount">split amount</string>

</resources>
