<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_margin="20dp"
            android:padding="8dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:id="@+id/aboutContact"
                android:layout_gravity="center"
                android:text="@string/description" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:id="@+id/descriptionContact"
                android:layout_gravity="center"
                android:textStyle="italic"
                android:textAlignment="center"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="15dp">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/phoneNumber"
                    android:textColor="#FFFFFF"
                    android:id="@+id/contactPhone"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:id="@+id/phoneNumber"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:inputType="phone" />



            </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/debts"
                android:textColor="#FFFFFF"
                android:id="@+id/textViewDebts"
                android:layout_gravity="center"/>

            <com.development.napptime.paydebt.NonScrollListView
                android:id="@+id/lv_nonscroll_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true">
            </com.development.napptime.paydebt.NonScrollListView>

            <Button
                android:text="@string/adddebt"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp"
                android:id="@+id/buttonAddDebt"

                android:clickable="false" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="15dp">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/favorite"
                    android:textColor="#FFFFFF"
                    android:id="@+id/textViewFavorite"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxFavorite"
                    android:layout_weight="1"/>



            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</LinearLayout>