<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/name"
                    android:id="@+id/textViewName"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:id="@+id/editName"
                    android:layout_weight="1" />


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/amount"
                    android:id="@+id/textViewAmount"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:id="@+id/editTextAmount"
                    android:layout_weight="1" />


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/date"
                    android:id="@+id/textViewDate"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:inputType="date"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:id="@+id/editTextDate"
                    android:layout_weight="1" />


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/due"
                    android:id="@+id/textViewDue"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:inputType="date"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:id="@+id/editTextDue"
                    android:layout_weight="1" />


            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/desc"
                android:id="@+id/textViewDesc"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="fill_parent"
                android:inputType="textMultiLine"
                android:lines="15"
                android:minLines="2"
                android:gravity="top|left"
                android:maxLines="15"
                android:maxLength="255"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:id="@+id/editTextDesc"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:paddingTop="15dp">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reminder"
                    android:id="@+id/textViewReminder"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxReminder"
                    android:layout_weight="1"/>



            </LinearLayout>

            <Button
                android:text="Confirm"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>