<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/contactsSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/amount"
                    android:id="@+id/amount"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:inputType="number"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:id="@+id/inputAmount"
                    android:maxLength="9"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/desc"
                android:id="@+id/entryDesc"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="fill_parent"
                android:inputType="textMultiLine"
                android:lines="15"
                android:minLines="2"
                android:gravity="top|start"
                android:maxLines="15"
                android:maxLength="255"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:id="@+id/inputDesc" />

            <Button
                android:text="@string/confirm"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/buttonAddEntry"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>